Refactoring: REfactored list of items with their link

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
 
 * TODO LIST:
 
-- Dettaglio ufficio.
+- FAQ
+- Helpdesk
+- Documentazione
+- Pagina base.
 - Gestione dei font.
 - Controllare tutti i link sprites.svg
 
