--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-08-05 10:47+0000\n"
+"PO-Revision-Date: 2025-08-05 10:57+0000\n"
 "Last-Translator: \n"
 "Language-Team: Italiano\n"
 "Language: it_IT\n"
@@ -248,38 +248,6 @@ msgstr "Realizzato per"
 #: page-templates/faq.php:165 page-templates/search.php:174
 msgid "Digit the text to search"
 msgstr "Scrivi il testo da cercare"
-
-#. Name of the template
-#: page-templates/events.php:2
-msgid "dis-event"
-msgstr "dis-event"
-
-#. Name of the template
-#: page-templates/news.php:2
-msgid "dis-news"
-msgstr "dis-news"
-
-#. Name of the template
-#: page-templates/offices.php:2
-msgid "dis-office"
-msgstr "dis-office"
-
-#. Name of the template
-#: page-templates/people.php:2
-#, fuzzy
-#| msgid "dis-person."
-msgid "dis-person"
-msgstr "dis-person"
-
-#. Name of the template
-#: page-templates/places.php:2
-msgid "dis-place"
-msgstr "dis-place"
-
-#. Name of the template
-#: page-templates/projects.php:2
-msgid "dis-project"
-msgstr "dis-project"
 
 #: config-pages.php:400
 msgctxt "DIS_ActivationItems"
@@ -893,6 +861,11 @@ msgstr "Inserisci il codice di analytics."
 msgid "Enter your email address to receive updates"
 msgstr "Inserisci il tuo indirizzo email per ricevere gli aggiornamenti"
 
+#. Name of the template
+#: page-templates/events.php:2
+msgid "Events"
+msgstr "Eventi"
+
 #: classes/export-manager.php:44 classes/export-manager.php:45
 msgid "Export data"
 msgstr "Esporta i dati"
@@ -1053,6 +1026,11 @@ msgstr "Sezioni della Home Page"
 #: single-dis-place.php:83
 msgid "Hours"
 msgstr "Orari"
+
+#. Name of the template
+#: page-templates/how-to.php:2
+msgid "How to"
+msgstr "How to"
 
 #: single-dis-place.php:49
 msgid "How to reach us"
@@ -1234,6 +1212,11 @@ msgid "NEW menu '%s' created."
 msgstr "NUOVO menu '%s' creato."
 
 #. Name of the template
+#: page-templates/news.php:2
+msgid "News"
+msgstr "Notizie"
+
+#. Name of the template
 #: classes/options-manager.php:719 page-templates/newsletter.php:2
 #: template-parts/common/newsletter.php:12
 msgid "Newsletter"
@@ -1266,6 +1249,11 @@ msgstr "Nessun risultato trovato"
 msgid "Office"
 msgstr "Ufficio"
 
+#. Name of the template
+#: page-templates/offices.php:2
+msgid "Offices"
+msgstr "Uffici"
+
 #: single-dis-service-cluster.php:68 page-templates/service-clusters.php:18
 #: template-parts/home/hp-clusters-section.php:22
 msgid "Our services"
@@ -1280,7 +1268,8 @@ msgstr "pagina"
 msgid "Page counters"
 msgstr "Contatori di pagina"
 
-#: single-dis-office.php:42
+#. Name of the template
+#: single-dis-office.php:42 page-templates/people.php:2
 msgid "People"
 msgstr "Persone"
 
@@ -1300,13 +1289,20 @@ msgstr "Telefono"
 msgid "Place Type"
 msgstr "Tipo di luogo"
 
+#. Name of the template
+#: page-templates/places.php:2
+msgid "Places"
+msgstr "Luoghi"
+
 #: single-dis-event.php:113 single-dis-place.php:115
 msgid "Position"
 msgstr "Posizione"
 
 #. Name of the template
 #: page-templates/articles.php:2
-msgid "post"
+#, fuzzy
+#| msgid "post"
+msgid "Post"
 msgstr "post"
 
 #: classes/options-manager.php:909
@@ -1322,7 +1318,9 @@ msgstr "Privacy"
 msgid "Privacy Policy"
 msgstr "Privacy Policy"
 
-#: single-dis-office.php:63 template-parts/home/hp-projects-section.php:27
+#. Name of the template
+#: single-dis-office.php:63 page-templates/projects.php:2
+#: template-parts/home/hp-projects-section.php:27
 msgid "Projects"
 msgstr "Progetti"
 
@@ -1387,9 +1385,10 @@ msgstr "Revoca"
 msgid "Right button label"
 msgstr "Etichetta del bottone di destra"
 
+#. Name of the template
 #: page-templates/documentation.php:141 page-templates/faq.php:169
-#: page-templates/search.php:178 page-templates/search.php:249
-#: template-parts/header/site_search.php:18
+#: page-templates/search.php:2 page-templates/search.php:178
+#: page-templates/search.php:249 template-parts/header/site_search.php:18
 msgid "Search"
 msgstr "Cerca"
 
@@ -1402,11 +1401,6 @@ msgstr "Etichetta del bottone di ricerca"
 #: template-parts/header/site_search.php:24
 msgid "Search in the site"
 msgstr "Cerca nel sito"
-
-#. Name of the template
-#: page-templates/search.php:2
-msgid "Search in the site."
-msgstr "Cerca nel sito."
 
 #: page-templates/search.php:74 page-templates/search.php:87
 msgid "Search results"
@@ -1464,9 +1458,14 @@ msgid "ServiceClusters"
 msgstr "GruppiServizi"
 
 #. Name of the template
-#: page-templates/service-items.php:2 page-templates/service-profile.php:2
+#: page-templates/service-items.php:2
 msgid "ServiceItems"
 msgstr "Servizi"
+
+#. Name of the template
+#: page-templates/service-profile.php:2
+msgid "ServiceProfile"
+msgstr "Profilo del servizio"
 
 #: page-templates/service-profile.php:28
 msgid "Services for"
